--- a/src/sass/_helpers.scss
+++ b/src/sass/_helpers.scss
@@ -33,18 +33,36 @@
 
     &--white {
       background-color: #fff;
+      transition: background-color 250ms ease-in;
+
+      &:hover {
+        background-color: color.$color-green;
+      }
     }
   }
 
   &--green {
     background-color: color.$color-green;
     color: color.$dark-blue;
+    transition: background-color, color 250ms ease-in;
+
+    &:hover {
+      background-color: #fff;
+      color: darken(color.$color-green, 50);
+    }
   }
 
   &--white-outline {
     border-color: #fff;
     border-width: 2px;
     color: #fff;
+
+    transition: border-color, color 250ms ease-in;
+
+    &:hover {
+      border-color: color.$color-green;
+      color: color.$color-green;
+    }
   }
 
   &--darkBlue-bordered {
@@ -147,7 +165,7 @@
 .image-block {
   display: flex;
 
-  & > img {
+  &>img {
     width: 100%;
     height: 100%;
     object-fit: cover;
