--- a/src/pages/home/hero/hero.scss
+++ b/src/pages/home/hero/hero.scss
@@ -17,6 +17,45 @@
   gap: 1rem;
   color: #fff;
 
+  @media(max-width: 900px) {
+    align-items: center;
+    justify-content: center;
+
+    &>h1,
+    &>p {
+      text-align: center;
+    }
+  }
+
+  @media(max-width: 600px) {
+
+    &>h1.heading-1 {
+      font-size: 3.8rem;
+    }
+  }
+
+  @media(max-width: 500px) {
+    max-width: 99%;
+
+    &>h1.heading-1 {
+      font-size: 3rem;
+    }
+
+    .hero-writeup__p {
+      font-size: 1.4rem;
+    }
+  }
+
+  @media(max-width: 384px) {
+    &>h1.heading-1 {
+      font-size: 2.5rem;
+    }
+
+
+
+  }
+
+
   &>p {
     font-size: 1.6rem;
     font-family: "Open Sans", sans-serif;
@@ -27,12 +66,23 @@
   display: flex;
   align-items: center;
   gap: 2rem;
+
+  @media(max-width: 900px) {
+    justify-content: center;
+  }
 }
 
 .hero-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @media(max-width: 900px) {
+    flex-direction: column;
+    justify-content: center;
+    gap: 4rem;
+
+  }
 }
 
 .hero-content__left {
@@ -42,7 +92,11 @@
   flex-direction: column;
   gap: 5rem;
 
-  z-index: 1;
+
+
+  @media(max-width: 900px) {
+    flex-basis: unset;
+  }
 }
 
 .hero-content__right {
@@ -51,6 +105,10 @@
   gap: 2.25rem;
   flex-basis: 50rem;
   max-width: 50rem;
+
+  @media(max-width: 900px) {
+    flex-basis: unset;
+  }
 }
 
 .content-right__cards {
@@ -74,6 +132,10 @@
   padding: 1rem 1.5rem;
   background-color: #456079;
   height: 100%;
+
+  @media(max-width: 900px) {
+    height: unset;
+  }
 }
 
 .graph-img--large {
