--- a/src/sass/_helpers.scss
+++ b/src/sass/_helpers.scss
@@ -7,24 +7,42 @@
   padding-left: 1rem;
   padding-right: 1rem;
 
+
+
   &-md {
     max-width: 1120px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 1rem;
     padding-right: 1rem;
+
+    @media(max-width:900px) {
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
   }
 }
 
 .button {
   border: 2px solid transparent;
   outline: 0;
-
+  text-wrap: nowrap;
   font-weight: 700;
   max-width: max-content;
   border-radius: 999px;
   font-size: 2rem;
   padding: 1.6rem 5.6rem;
+
+  @media(max-width:600px) {
+    font-weight: 500;
+    padding: 1rem 4rem;
+  }
+
+  @media(max-width: 420px) {
+    padding: .75rem 2rem;
+    font-size: 1.25rem;
+    font-weight: 600;
+  }
 
   &-link {
     padding: 0.8rem 4rem;
@@ -106,6 +124,10 @@
   font-size: 4.8rem;
   font-weight: 400;
   font-family: "Manrope", sans-serif;
+
+  @media(max-width: 900px) {
+    font-size: 3.8rem;
+  }
 }
 
 .heading-2 {
