--- a/src/pages/home/our-services/our-service-list/our-service-list.scss
+++ b/src/pages/home/our-services/our-service-list/our-service-list.scss
@@ -2,4 +2,20 @@
   display: flex;
   justify-content: space-between;
   gap: 10rem;
+
+  @media(max-width: 900px) {
+    gap: 2rem;
+  }
+
+  @media(max-width: 767px) {
+    gap: 1.25rem;
+  }
+
+  @media(max-width: 767px) {
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
+  }
+
+
 }
