--- a/src/sass/_helpers.scss
+++ b/src/sass/_helpers.scss
@@ -17,6 +17,11 @@
     padding-right: 1rem;
 
     @media(max-width:900px) {
+      padding-left: 6rem;
+      padding-right: 6rem;
+    }
+
+    @media(max-width: 600px) {
       padding-left: 2rem;
       padding-right: 2rem;
     }
@@ -128,12 +133,29 @@
   @media(max-width: 900px) {
     font-size: 3.8rem;
   }
+
+  @media(max-width: 600px) {
+    font-size: 3.8rem;
+  }
+
+  @media(max-width: 600px) {
+    font-size: 3rem;
+  }
+
+  @media(max-width: 384px) {
+    font-size: 2.5rem;
+  }
 }
 
 .heading-2 {
   font-size: 3.6rem;
   font-weight: 400;
   font-family: "Manrope", sans-serif;
+
+  @media(max-width: 900px) {
+    font-size: 2.8rem;
+    font-weight: 500;
+  }
 }
 
 .fz-md {
@@ -182,6 +204,11 @@
 .p-tb-8 {
   padding-top: 8rem;
   padding-bottom: 8rem;
+
+  @media(max-width: 900px) {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
 }
 
 .image-block {
