--- a/src/pages/home/our-services/service-rendered/service-rendered.scss
+++ b/src/pages/home/our-services/service-rendered/service-rendered.scss
@@ -49,9 +49,14 @@
     right: 6rem;
     top: 22.2rem;
 
-    @media(max-width: 480px) {
+    @media(max-width: 767px) {
         left: 3rem;
         top: 15.2rem;
+    }
+
+    @media(max-width: 600px) {
+        left: 2rem;
+        top: 10.2rem;
     }
 }
 
