--- a/src/pages/home/our-services/service-rendered/service-rendered.scss
+++ b/src/pages/home/our-services/service-rendered/service-rendered.scss
@@ -1,7 +1,11 @@
 .service-rendered {
     padding-bottom: 8rem;
 
-
+    // @media(max-width: 480px) {
+    //     &>article:first-child>.service-description {
+    //         border: 1px solid red;
+    //     }
+    // }
 
 }
 
@@ -42,6 +46,11 @@
 .bar-chart-positioner,
 .pie-chart-positioner {
     position: absolute;
+
+    @media(max-width: 767px) {
+        position: relative;
+
+    }
 }
 
 .bar-chart-positioner {
@@ -50,18 +59,17 @@
     top: 22.2rem;
 
     @media(max-width: 767px) {
-        left: 3rem;
-        top: 15.2rem;
+        inset: unset;
+        display: flex;
+        top: 2rem;
+
     }
 
-    @media(max-width: 600px) {
-        left: 2rem;
-        top: 10.2rem;
-    }
 }
 
 .bar-chart {
     width: 25rem;
+
 }
 
 .pie-chart {
@@ -76,6 +84,14 @@
 
     top: 30.4rem;
     left: 4.8rem;
+
+    @media(max-width: 767px) {
+        inset: unset;
+        display: flex;
+        top: 2rem;
+
+    }
+
 }
 
 .pie-chart__category-list {
@@ -98,6 +114,10 @@
     box-shadow: 0 4px 32px 0 rgba(#000, 0.12);
     border-radius: 1.2rem;
     padding: 4rem;
+
+    @media(max-width: 767px) {
+        flex: 1;
+    }
 
     &-content,
     &-data {
