--- a/src/pages/home/our-services/our-services.scss
+++ b/src/pages/home/our-services/our-services.scss
@@ -37,22 +37,36 @@
 }
 
 //accordions
+@media(max-width:800px) {
+  .ourservices-4>div.image-block {
+    height: 30rem;
+    overflow: hidden;
+    border-radius: 2.4rem;
 
-.accordion-block {
+  }
+}
+
+.ourservices-4-content {
   display: flex;
-  flex: row wrap;
   align-items: center;
   justify-content: space-between;
   margin-top: 5.6rem;
 
-  &>div {
-    flex-basis: 500px;
-    max-width: 500px;
+  @media(max-width: 800px) {
+    flex-direction: column;
+    margin-top: 3.5rem;
+    justify-content: unset;
   }
 
+  &>div,
   &>ul {
-    flex: 500px;
-    max-width: 500px;
+    flex: 50rem;
+    max-width: 50rem;
+
+    @media(max-width: 800px) {
+      flex: unset;
+      max-width: unset;
+    }
   }
 }
 
@@ -60,6 +74,11 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
+
+  @media(max-width: 800px) {
+    margin-top: 2rem;
+    width: 100%;
+  }
 }
 
 .accordion {
