--- a/src/sass/_helpers.scss
+++ b/src/sass/_helpers.scss
@@ -134,15 +134,11 @@
     font-size: 3.8rem;
   }
 
-  @media(max-width: 600px) {
-    font-size: 3.8rem;
-  }
-
-  @media(max-width: 600px) {
+  @media(max-width: 767px) {
     font-size: 3rem;
   }
 
-  @media(max-width: 384px) {
+  @media(max-width: 650px) {
     font-size: 2.5rem;
   }
 }
@@ -155,6 +151,15 @@
   @media(max-width: 900px) {
     font-size: 2.8rem;
     font-weight: 500;
+  }
+
+  @media(max-width: 650px) {
+    font-size: 2.2rem;
+    font-weight: 500;
+
+    &.line-h-lg {
+      line-height: unset;
+    }
   }
 }
 
